# abaqus_subroutine_forge

./: .gitignore  CMakeLists.txt  README.md  abaqus_subroutine_forge.h  conandata.yml  pyproject.toml
include/: abaqus_subroutine_force_3D.h  abaqus_subroutine_forge.h  communication.h
resources/: abaqus_CPE4_example.f  how_to_change_inp_file_for_UEL.md  uel_demo.cpp
test_and_benchmark/: CMakeLists.txt  basic_math.test.cc  basic_matrix.test.cc  basic_matrix_3D.test.cc  communication.test.cc  eigen_adaptor.h  eigen_value_prober_test.py  mechanical_matrix.test.cc  mechanics.test.cc
uels/: CMakeLists.txt  abaqus_C3D4_isotropic_linear_abaqus_strain.cpp  abaqus_CPS3_abaqus_strain.cpp  abaqus_CPS3_green_strain.cpp  abaqus_CPS3_input_properties_abaqus_strain.cpp  abaqus_CPS3_input_properties_green_strain.cpp  abaqus_CPS3_isotropic_linear_elastic_abaqus_strain.cpp  abaqus_CPS3_isotropic_linear_elastic_green_strain.cpp  abaqus_CPS3_try.cpp
utils/: C3D4_stiffness_matrix_computer.legacy.py  UnifiedCriteria_Uniaxial_SimForceBC_FixNoSurface.inp  UnifiedCriteria_Uniaxial_SimForceBC_FixNoSurface_KE.mtx  eigen_value_from_abaqus_output_element_K.py  eigen_value_from_abaqus_output_element_K_2D.py  eigen_value_from_abaqus_output_element_K_3D.py  eigen_value_from_abaqus_output_global_K.py  eigen_value_prober.py  element_stiffness_prober.py  inp_file_displacement_dof_prober.py  inp_file_displacement_dof_prober_2D.py  inp_file_displacement_dof_prober_3D.py
