[project]
name = "abaqus-subroutine-forge"
version = "0.1.0"
description = ""
authors = [
    { name = "zhy1186", email = "zhaohy19@mails.tsinghua.edu.cn" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy >=1.21.6"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
