include_directories(${CMAKE_SOURCE_DIR}/include)
add_library(abaqus_CPS3_input_properties_green_strain abaqus_CPS3_input_properties_green_strain.cpp)
add_library(abaqus_CPS3_input_properties_abaqus_strain abaqus_CPS3_input_properties_abaqus_strain.cpp)
add_library(abaqus_CPS3_isotropic_linear_elastic_green_strain abaqus_CPS3_isotropic_linear_elastic_green_strain.cpp)
add_library(abaqus_CPS3_isotropic_linear_elastic_abaqus_strain abaqus_CPS3_isotropic_linear_elastic_abaqus_strain.cpp)
add_library(abaqus_C3D4_isotropic_linear_abaqus_strain abaqus_C3D4_isotropic_linear_abaqus_strain.cpp)